--- a/src/components/Strip/Strip.css
+++ b/src/components/Strip/Strip.css
@@ -5,12 +5,11 @@
 }
 
 .container {
-  width: 48px;
   height: 12px;
   padding: 1px 0;
   font-size: 0.5em;
   background: #000000;
-  border-radius: 3px;
+  border-radius: 5px;
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
